EngineDriver changes by robin Becker: Pref to only show one throttle. Fix to keep current web page when auto-rotating. Separate prefs for throttle and web view.